# hermit-c

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CITATION.cff  README.md  meson.build
.github/workflows/: ci.yml
cross/: aarch64-hermit.ini  riscv64-hermit.ini  x86_64-hermit.ini
src/: atomic.c  fs.c  fstat.c  getaddrinfo.c  getsockname.c  hello_world.c  http_server.c  http_server_poll.c  http_server_select.c  libgen.c  limits.c  math.c  memory.c  print_assert.h  pthreads.c  thread_local.c  time.c  uname.c  vec.h
